2003-05-15  Akinori Ito <aito@fw.ipsj.or.jp>

	* [w3m-dev 03902] Re: table rendering
	* table.c (check_relative_width): check n_leftcell
				check w <= r

2003-05-14  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03901] body with status-code 401
	* file.c (loadGeneralFile): show page when 401, 407

2003-05-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03900] Re: table rendering
	* table.c (check_relative_width): j loop starts from 0

2003-05-14  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>

	* [w3m-dev 03899] minor fixes
	* acinclude.m4: fix s/SSLCFLAGS/SSL_CFLAGS/
	* doc/README: update, fix typo
	* doc-jp/FAQ.html: update, fix URL
	* doc-jp/README: update
	* doc-jp/README.SSL: update
	* doc-jp/README.cookie: update
	* doc-jp/README.img: update URL
	* doc-jp/README.migemo: update
	* doc-jp/STORY.html: fix URL

2003-05-14  Akinori Ito <aito@fw.ipsj.or.jp>

	* [w3m-dev 03898] Re: table rendering
	* table.c (check_relative_width): added
		(set_table_matrix): use check_relative_width

2003-05-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03896] html_quote in textarea in frame
	* frame.c (createFrameFile): fix html_quote in textarea in frame

2003-05-13  Hironori SAKAMOTO <h-saka@lsi.nec.co.jp>

	* [w3m-dev 03895] type=image support of pre_form
	* form.c (loadPreFOrm): add image
		(preFormUpdateBuffer): add FORM_INPUT_IMAGE
	* doc/README.pre_form: update
	* doc-jp/README.pre_form: ditto

2003-05-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03891] Re: urimethodmap and relative URL
	* url.c (parseURL2): copy scheme part into pu->file when SCM_UNKNOWN

2003-05-07  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03889] Progress bar in Download List Panel
	* main.c (DownloadListBuffer): calculation in double

2003-05-07  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>

	* [w3m-dev 03888] autodetect ssl
	* acinclude.m4 (AC_W3M_SSL): use SSL_*
	* configure.in: move AC_W3M_SSL after AC_W3M_EXTLIBS

2003-05-03  Hiroyuki Ito <hito@crl.go.jp>
